2001-07-18 John R. Jackson <jrj@purdue.edu>

	* server-src/amverify.sh.in: Change to the Amanda temp directory
	  instead of the config directory.  In addition to making amverify
	  act like most other Amanda programs, this gets around an
	  xfsrestore bug.

2001-07-18 John R. Jackson <jrj@purdue.edu>

	* man/amanda.8.in: Describe the .amandahosts format better.  Clean up
	  a couple of minor typos.

2001-07-13 John R. Jackson <jrj@purdue.edu>

	* common-src/dgram.h: Improve UDP datagram size calculation.
	* server-src/amcheck.c: Break up large requests into pieces.
	* server-src/planner.c: Break up large requests into pieces.

2001-07-12 John R. Jackson <jrj@purdue.edu>

	* tape-src/amdd.c: Use tapefd_close() in amdd if the file was
	  opened with tape_open().  This does any necessary output driver
	  cleanup (such as moving the current file position for "file:").

2001-07-12 John R. Jackson <jrj@purdue.edu>

	* Makefile.am: Fix automake warning.

2001-07-11 John R. Jackson <jrj@purdue.edu>

	* tape-src/tapetype.c: Use tapefd_write() instead of write().

2001-07-11 John R. Jackson <jrj@purdue.edu>

	* common-src/file.c: Fix a memory leak.  Grab exponentially larger
	  chunks of memory up to a point, then level out.

2001-07-11 John R. Jackson <jrj@purdue.edu>

	* tape-src/tapetype.c: Only report a pass summary when stderr is not
	  a tty.  Deal with some obscure end cases.

2001-07-10 John R. Jackson <jrj@purdue.edu>

	* server-src/Makefile.am: Backport development branch chg-scsi code
	  to 2.4.2.
	* changer-src/chg-scsi.c: Ditto.
	* changer-src/libscsi.h: Ditto.
	* changer-src/scsi-aix.c: Ditto.
	* changer-src/scsi-bsd.c: Ditto.
	* changer-src/scsi-cam.c: Ditto.
	* changer-src/scsi-changer-driver.c: Ditto.
	* changer-src/scsi-defs.h: Ditto.
	* changer-src/scsi-hpux.c: Ditto.
	* changer-src/scsi-hpux_new.c: Ditto.
	* changer-src/scsi-irix.c: Ditto.
	* changer-src/scsi-linux.c: Ditto.
	* changer-src/scsi-solaris.c: Ditto.
	* changer-src/sense.c: Ditto.
